--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "cli-table": "^0.3.1",
     "inquirer": "^7.0.0",
     "mysql": "^2.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1"
   }
 }
